--- a/todoList.html
+++ b/todoList.html
@@ -18,10 +18,10 @@
    <div class="sectoin_todo">
         <div class="container">
             <div class="addTaskField">
-              <input type="text" class="inputTask form-control" id="inputTask">
-                <button class="btnAddTask" >
-                    <i class="fa-solid fa-plus"></i>
-                    </button>
+              <input type="text" class="inputTask" id="inputTask">
+                <button class="btnAddTask" > <i class="fa-solid fa-plus"></i></button>
+                    <span > You can add Task via click on <i class="fa-solid fa-plus"></i> or Press on Enter
+                    </span>
             </div>
             <table class="table table-striped ">
                 <thead>
@@ -33,7 +33,7 @@
                 </thead>
                 <tbody id="taskList">
                    <!-- <th scope="row">1</th>
-                    <td scope="col" class="fw-bold p-3">Study</td>
+                    <td scope="col" class="fw-bold p-3 ">Study</td>
                     <td><button class="btn btn-success "><i class="fa fa-check fa-xl" aria-hidden="true"></i> </button></td>
                     <td scope="col"><button class="btn btn-dark"><i class="fa-solid fa-wrench text-warning fa-xl"></i></button></i></td>
                     <td scope="col"> <button class="btn btn-danger"> <i class="fa fa-times fa-xl" aria-hidden="true"></i></button></td> -->
